<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExcursionDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:layout_marginTop="20dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_holder"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/excursion_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!-- Excursion name -->
            <TextView
                android:id="@+id/excursion_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/enter_excursion_name"
                android:layout_margin="10dp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/edit_excursion_name"/>

            <EditText
                android:id="@+id/edit_excursion_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:background="@color/gray_200"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Start Date -->
            <TextView
                android:id="@+id/excursion_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/enter_excursion_start_date"
                android:layout_margin="10dp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/edit_excursion_date"/>

            <TextView
                android:id="@+id/edit_excursion_date"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/gray_200"
                android:textSize="16sp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/edit_excursion_name"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/save_excursion"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/gray_400"
                android:text="@string/save"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/edit_excursion_date"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/delete_excursion"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/gray_400"
                android:text="@string/delete_button"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/save_excursion"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>