<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VacationListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:layout_marginTop="20dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_excursion_floating_point_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/gray_200"
        android:src="@drawable/baseline_add_circle_24"
        android:tint="@color/blue_800"
        android:clickable="true"
        app:maxImageSize="66dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_holder"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/vacation_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <!-- VACATION TITLE -->
                <TextView
                    android:id="@+id/vacation_title_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/enter_vacation_name"
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@+id/edit_vacation_title"/>

                <EditText
                    android:id="@+id/edit_vacation_title"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textShortMessage"
                    android:background="@color/gray_200"
                    android:textSize="16sp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <!-- HOTEL TITLE -->
                <TextView
                    android:id="@+id/hotel_title_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/hotel"
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@+id/edit_hotel_title"/>

                <EditText
                    android:id="@+id/edit_hotel_title"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textShortMessage"
                    android:background="@color/gray_200"
                    android:textSize="16sp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toBottomOf="@id/edit_vacation_title"
                    app:layout_constraintEnd_toEndOf="parent" />

                <!-- START DATE -->
                <TextView
                    android:id="@+id/start_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/start_date"
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@+id/edit_start_date"/>

                <TextView
                    android:id="@+id/edit_start_date"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="10dp"
                    android:background="@color/gray_200"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/edit_hotel_title"
                    app:layout_constraintEnd_toEndOf="parent" />

                <!-- END DATE -->
                <TextView
                    android:id="@+id/end_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="End Date: "
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@+id/edit_end_date"/>

                <TextView
                    android:id="@+id/edit_end_date"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="10dp"
                    android:background="@color/gray_200"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/edit_start_date"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/save_vacation"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@color/gray_400"
                    android:layout_margin="10dp"
                    android:text="@string/save"
                    app:layout_constraintTop_toBottomOf="@id/edit_end_date"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <Button
                    android:id="@+id/delete_vacation"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@color/gray_400"
                    android:layout_margin="10dp"
                    android:text="@string/delete_button"
                    app:layout_constraintTop_toBottomOf="@id/save_vacation"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vacation_form">

                <TextView
                    android:id="@+id/excursion_recycler_view_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/excursions"
                    android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/excursion_recycler_view_label">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/excursion_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical"

                        />

                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>